--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p>testttttt</p>
-</body>
-</html>
+<head>
+  <title>Matías Bruna</title>
+  <link href="home.css" rel="stylesheet" type="text/css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
