--- a/index.html
+++ b/index.html
@@ -4,3 +4,10 @@
   <link href="home.css" rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+<body>
+<div style="width:auto; margin-left:5%; margin-right:10%;">
+<div class="row">
+<div class="col1"> 
+ <h1>Test</h1>
+</body>
+</html>
